--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h2 class="title">BAIDU_IFE</h2>
         <a  class="baidu-item" href="baidu_ife/1-03/test.html">1-03</a>
         <a  class="baidu-item" href="baidu_ife/1-04/index.html">1-04</a>
+        <a  class="baidu-item" href="baidu_ife/1-06/index.html">1-06</a>
     </section>
 
   
