--- a/baidu_ife/1-06/index.html
+++ b/baidu_ife/1-06/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="content-wrapper">
     <header>
-        <p class="logo">ife.baidu.com</p>
+        <p class="logo"> ife.baidu.com</p>
         <p class="date">2016.03</p>
     </header>
 
@@ -22,7 +22,7 @@
                 <div class="right shade"></div>
             </div>
             <div class="right-banner">
-                <p class="banner-title">ABOUT</p>
+                <p class="banner-title"><strong>A</strong>BOUT</p>
                 <p class="banner-title">TECHNOLOGY</p>
                 <p class="banner-desp">About technology About technology About technology</p>
                 <p class="big-number">700</p>
@@ -48,9 +48,10 @@
                     前端前端前端前端前端前端
                     前前端前端前端
 
-                    What-------<span>40%</span>
-                    What-------<span>30%</span>
-                    What-------<span>30%</span>
+                    <span class="percent">What-------<span>40%</span>
+                        What-------<span>30%</span>
+                        What-------<span>30%</span>
+                    </span>
                 </p>
             </div>
         </section>
@@ -63,10 +64,10 @@
                 <p class="zh title">前端技术领域</p>
                 <span class="first-zh-word">前</span>
                 <p class="news news-content">
-                    前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
+                    前前端前端前端前端前端前端端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
                     <img class="word-img" src="img/left-bottom.jpg" />
-                      前前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前前端前端前端前端前端前端前前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前.<br />
-                    前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
+                      前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前.<br />
+                    前端前端前端前端前端前端端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
                     前前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端前端
                 </p>
             </div>
@@ -82,9 +83,9 @@
                 <div class="index-wrapper">
                     <div class="index">
                         <ul>
-                            <li>前端前端前端前端前端.................前端</li>
-                            <li>前端前端前端前端前端.................前端</li>
-                            <li>前端前端前端前端前端.................前端</li>
+                            <li>前端前端前端前端前端....................................<span>前端</span></li>
+                            <li>前端前端前端前端前端....................................<span>前端</span></li>
+                            <li>前端前端前端前端前端....................................<span>前端</span></li>
                         </ul>
                     </div>
                     <div class="red-sign">
@@ -95,7 +96,9 @@
                         </span>
                     </div>
                     <div class="quote">
-                        hello world hello world hello world hello world hello world hello world
+                        <span class="left-quote">"</span>
+                        <p>hello world hello world hello world hello world hello world hello world hello world hello world</p>
+                        <span class="right-quote">"</span>
                     </div>
                 </div>
             </div>
