--- a/baidu_ife/1-06/index.html
+++ b/baidu_ife/1-06/index.html
@@ -83,9 +83,9 @@
                 <div class="index-wrapper">
                     <div class="index">
                         <ul>
-                            <li>前端前端前端前端前端....................................<span>前端</span></li>
-                            <li>前端前端前端前端前端....................................<span>前端</span></li>
-                            <li>前端前端前端前端前端....................................<span>前端</span></li>
+                            <li>前端前端前端前端前端.............................<span>前端</span></li>
+                            <li>前端前端前端前端前端.............................<span>前端</span></li>
+                            <li>前端前端前端前端前端.............................<span>前端</span></li>
                         </ul>
                     </div>
                     <div class="red-sign">
