--- a/baidu_ife/1-06/index.html
+++ b/baidu_ife/1-06/index.html
@@ -22,8 +22,10 @@
                 <div class="right shade"></div>
             </div>
             <div class="right-banner">
-                <p class="banner-title"><strong>A</strong>BOUT</p>
+                <p class="banner-title">ABOUT</p>
+                <div class="clear-fix"></div>
                 <p class="banner-title">TECHNOLOGY</p>
+                <div class="clear-fix"></div>
                 <p class="banner-desp">About technology About technology About technology</p>
                 <p class="big-number">700</p>
                 <p class="small-number">3.2</p>
