modify home page

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <section class="page-header">
         <h1 class="project-name">Hansneil.GitHub.io</h1>
-        <h2 class="project-tagline">Hansneil</h2>
+        <h2 class="project-tagline">For More Info: <a class="website" href="http://www.hansneil.com">Hansneil</a></h2>
     </section>
 
     <section class="main-content">
-        <h2 class="title">BAIDU_IFE</h2>
+        <p class="title">BAIDU IFE</p>
         <a  class="baidu-item" href="baidu_ife/1-03/test.html">1-03</a>
         <a  class="baidu-item" href="baidu_ife/1-04/index.html">1-04</a>
         <a  class="baidu-item" href="baidu_ife/1-06/index.html">1-06</a>
