--- a/baidu_ife/1-07/index.html
+++ b/baidu_ife/1-07/index.html
@@ -200,29 +200,13 @@
                     </p>
                 </div>
                 <div class="join-table">
-                    <form>
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td><input type="text" value="姓名:"></td>
-                                    <td><input type="text" value="年龄:"></td>
-                                </tr>
-                                <tr>
-                                    <td><input type="text" value="联系方式:"></td>
-                                    <td><input type="text" value="联系地址:"></td>
-                                </tr>
-                                <tr>
-                                    <td class="one-item" colpan="2">
-                                        <textarea>请简单描述您梦想的生活:</textarea>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td class="one-item" colpan="2">
-                                        <div class="submit">提交申请</div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <form method="">
+                        <input type="text" value="姓名:">
+                        <input type="text" value="年龄:">
+                        <input type="text" value="联系方式:">
+                        <input type="text" value="联系地址:">
+                        <textarea>请简单描述您梦想的生活:</textarea>
+                        <div class="submit">提交申请</div>
                     </form>
                 </div>
             </div>
