--- a/baidu_ife/1-07/index.html
+++ b/baidu_ife/1-07/index.html
@@ -185,17 +185,17 @@
             <div class="join-us">
                 <div class="announce">
                     <p class="name">新世界志愿者协议</p>
-                    <p class="content">
+                    <p class="a-content">
                         加入新世界志愿者的人员必须遵守中华人民共和国的相关法律法规, 并且本着平等自愿的原则...
                         <span><i class="glyphicon glyphicon-chevron-down"></i>more</span>
                     </p>
                     <p class="name">新世界志愿者权利</p>
-                    <p class="content">
+                    <p class="a-content">
                         新世界志愿者享受新世界内部所有资源共享的权利, 并享受所在地新世界活动的优先参与资格...
                         <span><i class="glyphicon glyphicon-chevron-down"></i>more</span>
                     </p>
                     <p class="name">更多条款</p>
-                    <p class="content">
+                    <p class="a-content">
                         <span><i class="glyphicon glyphicon-chevron-down"></i>more</span>
                     </p>
                 </div>
