--- a/baidu_ife/1-07/index.html
+++ b/baidu_ife/1-07/index.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
 </header>
-<div class="content">
+<div class="main-content">
     <section class="screen">
         <div class="mask"></div>
         <div class="new-life">
