--- a/baidu_ife/1-07/index.html
+++ b/baidu_ife/1-07/index.html
@@ -201,12 +201,12 @@
                 </div>
                 <div class="join-table">
                     <form method="">
-                        <input type="text" value="姓名:">
-                        <input type="text" value="年龄:">
+                        <input type="text" placeholder="姓名:">
+                        <input type="text" placeholder="年龄:">
                         <br/>
-                        <input type="text" value="联系方式:">
-                        <input type="text" value="联系地址:">
-                        <textarea>请简单描述您梦想的生活:</textarea>
+                        <input type="text" placeholder="联系方式:">
+                        <input type="text" placeholder="联系地址:">
+                        <textarea placeholder="请简单描述您梦想的生活:"></textarea>
                         <div class="submit">提交申请</div>
                     </form>
                 </div>
@@ -219,7 +219,7 @@
     <p class="small">为了更好的获取我们最新的产品资讯, 您可以留下您的电子邮箱快速订阅我们的产品资讯</p>
     <p class="small">也可以通过以下任何方式关注我们的动态</p>
     <div class="email">
-        <input type="text" value="someone@email.com"><span>提交</span>
+        <input type="text" placeholder="someone@email.com"><span>提交</span>
     </div>
     <ul>
         <li class="qq"></li>
