--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a  class="baidu-item" href="baidu_ife/1-04/index.html">1-04</a>
         <a  class="baidu-item" href="baidu_ife/1-06/index.html">1-06</a>
         <a  class="baidu-item" href="baidu_ife/1-07/index.html">1-07</a>
+        <a  class="baidu-item" href="baidu_ife/1-08/index.html">1-08</a>
     </section>
 
   
