modify box sizing

--- a/baidu_ife/1-07/index.html
+++ b/baidu_ife/1-07/index.html
@@ -202,8 +202,8 @@
                 </div>
                 <div class="join-table">
                     <form method="">
-                        <input type="text" placeholder="姓名:">
-                        <input type="text" placeholder="年龄:">
+                        <input class="odd" type="text" placeholder="姓名:">
+                        <input class="even" type="text" placeholder="年龄:">
                         <br/>
                         <input type="text" placeholder="联系方式:">
                         <input type="text" placeholder="联系地址:">
