--- a/important_point/index.html
+++ b/important_point/index.html
@@ -4,34 +4,33 @@
     <meta charset="UTF-8">
     <title>Important Point</title>
     <style>
-        .mmm {
-            background-color: #23e878;
+        header, p {
+            margin: 0;
+            padding: 0;
         }
-        .here {
-            float: left;
-            width: 200px;
-            height: 50px;
+        * {
+            box-sizing: border-box;
+        }
+        header {
+            width: 100%;
+            height: 3.6rem;
             background-color: #00e8f8;
+            overflow: hidden;
         }
-        .hahah {
-            width: 400px;
-            color: #ffffff;
-            background-color: #1d3e81;
+        p {
+            margin-top: 1.2rem;
+            font-size: 1rem;
+            padding-bottom: 1.2rem;
+            border-bottom: .2rem solid crimson;
+            line-height: 100%;
         }
-        /*.clearfix { zoom: 1}
-        .clearfix:after {
-            content: '';
-            display: block;
-            height: 0;
-            clear: both;
-            visibility: hidden;
-        }*/
-        .clearfix {
-            clear: both;
-        }
+
     </style>
 </head>
 <body>
+<header>
+    <p>a</p>
+</header>
 <div class="mmm">
     <div class="here">
         <p>
