modify html labels

--- a/baidu_ife/1-07/index.html
+++ b/baidu_ife/1-07/index.html
@@ -116,26 +116,26 @@
             <div class="mask info"></div>
         </section>
         <section class="activity-place">
-            <div class="place">
-                <p class="big"><span>北 京 活 动</span>新社区联盟</p>
+            <figure class="place">
+                <figcaption class="big"><span>北 京 活 动</span>新社区联盟</figcaption>
                 <div class="activity-poster beijing"></div>
-                <p class="small"><span>北京活动</span>新社区联盟</p>
-            </div>
-            <div class="place selected">
-                <p class="big"><span>上 海 活 动</span>夜上海新景观探索</p>
+                <figcaption class="small"><span>北京活动</span>新社区联盟</figcaption>
+            </figure>
+            <figure class="place selected">
+                <figcaption class="big"><span>上 海 活 动</span>夜上海新景观探索</figcaption>
                 <div class="activity-poster shanghai"></div>
-                <p class="small"><span>上海活动</span>夜上海新景观探索</p>
-            </div>
-            <div class="place">
-                <p class="big"><span>深 圳 活 动</span>全新海岸线观点站</p>
+                <figcaption class="small"><span>上海活动</span>夜上海新景观探索</figcaption>
+            </figure>
+            <figure class="place">
+                <figcaption class="big"><span>深 圳 活 动</span>全新海岸线观点站</figcaption>
                 <div class="activity-poster shenzhen"></div>
-                <p class="small"><span>深圳活动</span>全新海岸线观点站</p>
-            </div>
-            <div class="place">
-                <p class="big"><span>香 港 活 动</span>奢侈消费大派送</p>
+                <figcaption class="small"><span>深圳活动</span>全新海岸线观点站</figcaption>
+            </figure>
+            <figure class="place">
+                <figcaption class="big"><span>香 港 活 动</span>奢侈消费大派送</figcaption>
                 <div class="activity-poster hongkong"></div>
-                <p class="small"><span>香港活动</span>奢侈消费大派送</p>
-            </div>
+                <figcaption class="small"><span>香港活动</span>奢侈消费大派送</figcaption>
+            </figure>
         </section>
         <section class="activity-detail">
             <div class="poster">
