--- a/important_point/index.html
+++ b/important_point/index.html
@@ -4,45 +4,13 @@
     <meta charset="UTF-8">
     <title>Important Point</title>
     <style>
-        header, p {
-            margin: 0;
-            padding: 0;
-        }
-        * {
-            box-sizing: border-box;
-        }
-        header {
-            width: 100%;
-            height: 3.6rem;
-            background-color: #00e8f8;
-            overflow: hidden;
-        }
-        p {
-            margin-top: 1.2rem;
-            font-size: 1rem;
-            padding-bottom: 1.2rem;
-            border-bottom: .2rem solid crimson;
-            line-height: 100%;
-        }
-
     </style>
 </head>
 <body>
 <header>
     <p>a</p>
 </header>
-<div class="mmm">
-    <div class="here">
-        <p>
-            hahahhahahahhah
-        </p>
-    </div>
-    <div class="hahah clearfix">
-        sjkajjksnkdajdkjasjsd<br/>
-        sajsjajksajjsak<br/>
-        sajsjajksajjsak<br/>
-        sajsjajksajjsak<br/>
-    </div>
-</div>
+<input type="radio" checked="true" value="1" name="aaa">
+<input type="radio" value="0" name="aaa">
 </body>
 </html>
