add ife 1-09 link

--- a/baidu_ife/1-09/index.html
+++ b/baidu_ife/1-09/index.html
@@ -132,11 +132,11 @@
                             <a class="btn-select time">
                                 <input type="radio" class="hidden-btn" name="item"/>
                                 <ul class="dropdown">
-                                    <li>10人</li>
-                                    <li>20人</li>
-                                    <li>30人</li>
+                                    <li>8天</li>
+                                    <li>15天</li>
+                                    <li>30天</li>
                                 </ul>
-                                <span class="cur-select">10人<i class="glyphicon glyphicon-chevron-down"></i></span>
+                                <span class="cur-select">8天<i class="glyphicon glyphicon-chevron-down"></i></span>
                             </a>
                         </div>
                         <div class="counters">
@@ -154,11 +154,11 @@
                             <a class="btn-select deals">
                                 <input type="radio" class="hidden-btn" name="item"/>
                                 <ul class="dropdown">
-                                    <li>10人</li>
-                                    <li>20人</li>
-                                    <li>30人</li>
+                                    <li>10项</li>
+                                    <li>20项</li>
+                                    <li>30项</li>
                                 </ul>
-                                <span class="cur-select">10人<i class="glyphicon glyphicon-chevron-down"></i></span>
+                                <span class="cur-select">10项<i class="glyphicon glyphicon-chevron-down"></i></span>
                             </a>
                             <a href="#" class="search-btn">搜索</a>
                         </div>
@@ -278,7 +278,6 @@
                                         </tbody>
                                     </table>
                                 </div>
-                                <div class="shade"></div>
                             </li>
                             <li>
                                 <input class="tab-radio" type="radio" value="0" name="project" />
