fix the content width

--- a/baidu_ife/1-09/index.html
+++ b/baidu_ife/1-09/index.html
@@ -81,7 +81,7 @@
             </ul>
         </section>
         <section class="main-content flow-wrapper">
-            <div class="search-box flex-md-12">
+            <div class="search-box flex">
                 <form method="">
                     <div class="column query">
                         <label>查询项</label>
@@ -165,7 +165,7 @@
                     </div>
                 </form>
             </div>
-            <div class="history flex-md-12">
+            <div class="history flex">
                 <div class="flex-sf-1 nav prev">
                     <i class="glyphicon glyphicon-chevron-right"></i>
                 </div>
