--- a/baidu_ife/1-09/index.html
+++ b/baidu_ife/1-09/index.html
@@ -82,7 +82,7 @@
         </section>
         <section class="main-content flow-wrapper">
             <div class="search-box flex">
-                <form method="">
+                <form method="POST">
                     <div class="column query">
                         <label>查询项</label>
                         <a class="btn-select">
@@ -583,7 +583,7 @@
                             <th class="hot">搜索指数</th>
                         </tr>
                         <tbody>
-                            <tr>
+                            <tr class="selected">
                                 <td class="rank">1</td>
                                 <td class="name">大众</td>
                                 <td class="hot">48912001<span class="hot-bar"><span class="hot-inner inner-80"></span></span></td>
