--- a/important_point/index.html
+++ b/important_point/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Important Point</title>
+    <meta charset="utf-8">
+    <title>IFE JavaScript Task 01</title>
     <style>
+        .haha {
+
+        }
     </style>
 </head>
 <body>
-<header>
-    <p>a</p>
-</header>
-<input type="radio" checked="true" value="1" name="aaa">
-<input type="radio" value="0" name="aaa">
+
+<h3>污染城市列表</h3>
+<div>
+    <div class="haha">hhaha</div>
+</div>
+
+<script type="text/javascript">
+
+</script>
 </body>
 </html>
