--- a/index.html
+++ b/index.html
@@ -16,15 +16,23 @@
     </section>
 
     <section class="main-content">
-        <p class="title">BAIDU IFE</p>
+        <p class="title">BAIDU IFE 1</p>
         <a  class="baidu-item" href="baidu_ife/1-03/index.html">1-03</a>
         <a  class="baidu-item" href="baidu_ife/1-04/index.html">1-04</a>
         <a  class="baidu-item" href="baidu_ife/1-06/index.html">1-06</a>
         <a  class="baidu-item" href="baidu_ife/1-07/index.html">1-07</a>
         <a  class="baidu-item" href="baidu_ife/1-08/index.html">1-08</a>
         <a  class="baidu-item" href="baidu_ife/1-09/index.html">1-09</a>
+        <a  class="baidu-item" href="baidu_ife/1-10/index.html">1-10</a>
     </section>
 
-  
+    <section class="main-content">
+        <p class="title">BAIDU IFE 2</p>
+        <a  class="baidu-item" href="baidu_ife/2-13/index.html">2-13</a>
+        <a  class="baidu-item" href="baidu_ife/2-14/index.html">2-14</a>
+        <a  class="baidu-item" href="baidu_ife/2-15/index.html">2-15</a>
+        <a  class="baidu-item" href="baidu_ife/2-16/index.html">2-16</a>
+        <a  class="baidu-item" href="baidu_ife/2-17/index.html">2-17</a>
+    </section>
   </body>
 </html>
