--- a/baidu_ife/2-17/index.html
+++ b/baidu_ife/2-17/index.html
@@ -38,11 +38,12 @@
             height: 600px;
             box-shadow: 0px 0px 5px #999999;
             border-radius: 15px;
-            overflow: scroll;
+            overflow: visible;
         }
         .aqi-bar {
             position: absolute;
             bottom: 0;
+            cursor: pointer;
         }
         label {
             position: relative;
@@ -66,6 +67,27 @@
         .selected {
             background-color: #16324a;
             color: white;
+        }
+        .aqi-hint {
+            position: absolute;
+            display: none;
+            width: 120px;
+            border: 1px solid #16324a;
+            background-color: white;
+            z-index: 999;
+            font-size: .75rem;
+            line-height: 20px;
+            text-align: center;
+            border-radius: 5px;
+        }
+        .show + div {
+            display: block;
+        }
+        .title {
+            position: absolute;
+            text-align: center;
+            width: 100%;
+            top: 10px;
         }
     </style>
 </head>
