--- a/baidu_ife/2-17/index.html
+++ b/baidu_ife/2-17/index.html
@@ -33,12 +33,14 @@
         }
         #aqi-chart-wrap {
             position: relative;
-            margin: 20px auto;
             width: 1200px;
             height: 600px;
             box-shadow: 0px 0px 5px #999999;
             border-radius: 15px;
             overflow: visible;
+            left: 50%;
+            top: 40%;
+            transform: translate(-50%, -50%);
         }
         .aqi-bar {
             position: absolute;
@@ -57,6 +59,7 @@
             line-height: 50px;
             border: 1px solid #16324a;
             border-radius: 50%;
+            cursor: pointer;
         }
         label input {
             position: absolute;
