--- a/baidu_ife/2-17/index.html
+++ b/baidu_ife/2-17/index.html
@@ -35,12 +35,10 @@
             position: relative;
             width: 1200px;
             height: 600px;
+            margin: 50px auto;
             box-shadow: 0px 0px 5px #999999;
             border-radius: 15px;
             overflow: visible;
-            left: 50%;
-            top: 40%;
-            transform: translate(-50%, -50%);
         }
         .aqi-bar {
             position: absolute;
@@ -82,6 +80,8 @@
             line-height: 20px;
             text-align: center;
             border-radius: 5px;
+            box-shadow: 0px 0px 5px #dddddd;
+            opacity: .8;
         }
         .show + div {
             display: block;
