--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a  class="baidu-item" href="baidu_ife/2-15/index.html">2-15</a>
         <a  class="baidu-item" href="baidu_ife/2-16/index.html">2-16</a>
         <a  class="baidu-item" href="baidu_ife/2-17/index.html">2-17</a>
+        <a  class="baidu-item" href="baidu_ife/2-18/index.html">2-18</a>
     </section>
   </body>
 </html>
