--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <a  class="baidu-item" href="baidu_ife/2-16/index.html">2-16</a>
         <a  class="baidu-item" href="baidu_ife/2-17/index.html">2-17</a>
         <a  class="baidu-item" href="baidu_ife/2-18/index.html">2-18</a>
+        <a  class="baidu-item" href="baidu_ife/2-21/index.html">2-21</a>
     </section>
   </body>
 </html>
