--- a/baidu_ife/2-21/index.html
+++ b/baidu_ife/2-21/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <title>Task 21</title>
     <style>
+        @font-face {
+            font-family: yaHei;
+            src: url('../1-06/css/font/msyh.ttf');
+        }
         * {
             box-sizing: border-box;
             margin: 0;
             padding: 0;
+            font-family: "Microsoft YaHei", yaHei;
         }
         section {
             width: 800px;
