--- a/important_point/index.html
+++ b/important_point/index.html
@@ -4,20 +4,21 @@
     <meta charset="utf-8">
     <title>IFE JavaScript Task 01</title>
     <style>
-        .haha {
-
+        input + input {
+            font-size: 2rem;
         }
     </style>
 </head>
 <body>
-
-<h3>污染城市列表</h3>
-<div>
-    <div class="haha">hhaha</div>
-</div>
-
-<script type="text/javascript">
-
+<form>
+    <input type="text" name="username" value="">
+    <input type="button" value="Echo Username" onclick="getValue()">
+</form>
+<script>
+    function getValue() {
+        var input = document.querySelector('input');
+        console.log(input.getAttribute('value'));
+    }
 </script>
 </body>
 </html>
