--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a  class="baidu-item" href="baidu_ife/2-18/index.html">2-18</a>
         <a  class="baidu-item" href="baidu_ife/2-21/index.html">2-21</a>
         <a  class="baidu-item" href="baidu_ife/2-22/index.html">2-22</a>
+        <a  class="baidu-item" href="baidu_ife/2-23/index.html">2-23</a>
     </section>
   </body>
 </html>
