--- a/baidu_ife/2-26/index.html
+++ b/baidu_ife/2-26/index.html
@@ -17,14 +17,22 @@
             <circle cx="0" cy="0" r="200" style="stroke: #3e4059; fill: none; stroke-width: 2" />
         </g>
         <g id="craft">
-            <rect x="0" y="0" width="20" height="40" rx="10" ry="10" fill="#d9e6cd" />
+            <rect x="0" y="0" width="20" height="40" rx="10" ry="10" style="fill: #d9e6cd">
+                <animateTransform attributeName="transform" type="rotate"
+                                  from="0" to="360" begin="button.click"
+                                  dur="6s" />
+            </rect>
+        </g>
+        <g id="button">
+            <rect x="0" y="0" width="40" height="20" rx="4" ry="4" style="fill: #d9e6cd" />
         </g>
     </defs>
     <use xlink:href="#orbite" transform="translate(400, 400)"/>
     <use xlink:href="#orbite" transform="translate(400, 400) scale(1.25)"/>
     <use xlink:href="#orbite" transform="translate(400, 400) scale(1.5)"/>
     <use xlink:href="#orbite" transform="translate(400, 400) scale(1.75)"/>
-    <use xlink:href="#craft" transform="translate(590, 400)" />
+    <use xlink:href="#craft" transform="translate(400, 400)" x="190"/>
+    <use xlink:href="#button" />
 </svg>
 </body>
 </html>
