--- a/baidu_ife/2-26/index.html
+++ b/baidu_ife/2-26/index.html
@@ -3,36 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <title>Task 26</title>
-    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-<div class="planet">
-    <div class="hole-1"></div>
-    <div class="hole-2"></div>
-    <div class="hole-3"></div>
-</div>
-<svg id="svg" xmlns="http://www.w3.org/2000/svg">
-    <defs>
-        <g id="orbite">
-            <circle cx="0" cy="0" r="200" style="stroke: #3e4059; fill: none; stroke-width: 2" />
-        </g>
-        <g id="craft">
-            <rect x="0" y="0" width="20" height="40" rx="10" ry="10" style="fill: #d9e6cd">
-                <animateTransform attributeName="transform" type="rotate"
-                                  from="0" to="360" begin="button.click"
-                                  dur="6s" />
-            </rect>
-        </g>
-        <g id="button">
-            <rect x="0" y="0" width="40" height="20" rx="4" ry="4" style="fill: #d9e6cd" />
-        </g>
-    </defs>
-    <use xlink:href="#orbite" transform="translate(400, 400)"/>
-    <use xlink:href="#orbite" transform="translate(400, 400) scale(1.25)"/>
-    <use xlink:href="#orbite" transform="translate(400, 400) scale(1.5)"/>
-    <use xlink:href="#orbite" transform="translate(400, 400) scale(1.75)"/>
-    <use xlink:href="#craft" transform="translate(400, 400)" x="190"/>
-    <use xlink:href="#button" />
-</svg>
+<section class="control">
+    <ul>
+        <li class="craft-control">
+            <span>1号</span>
+            <ul class="operates">
+                <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
+                <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
+                <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
+                <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
+                <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
+            </ul>
+        </li>
+        <li class="craft-control">
+            <span>2号</span>
+            <ul class="operates">
+                <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
+                <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
+                <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
+                <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
+                <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
+            </ul>
+        </li>
+        <li class="craft-control hidden">
+            <span>3号</span>
+            <ul class="operates">
+                <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
+                <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
+                <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
+                <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
+                <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
+            </ul>
+        </li>
+        <li class="craft-control hidden">
+            <span>4号</span>
+            <ul class="operates">
+                <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
+                <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
+                <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
+                <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
+                <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
+            </ul>
+        </li>
+        <li class="craft-control craft-add">
+            <span>+</span>
+        </li>
+    </ul>
+</section>
+<section class="console">
+    
+</section>
+<section id="layout">
+    <div class="planet">
+        <div class="hole-1"></div>
+        <div class="hole-2"></div>
+        <div class="hole-3"></div>
+    </div>
+    <div id="orbite1" class="rotating">
+        <div class="orbite-1"></div>
+        <div class="craft-model-1"></div>
+    </div>
+    <div id="orbite2" class="rotating">
+        <div class="orbite-2"></div>
+        <div class="craft-model-2"></div>
+    </div>
+    <div id="orbite3" class="rotating">
+        <div class="orbite-3"></div>
+        <div class="craft-model-3"></div>
+    </div>
+    <div id="orbite4" class="rotating">
+        <div class="orbite-4"></div>
+        <div class="craft-model-4"></div>
+    </div>
+</section>
+<script src="js/spacecraft.js"></script>
+<script src="js/commander.js"></script>
+<script src="js/mediator.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
