--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <a  class="baidu-item" href="baidu_ife/2-21/index.html">2-21</a>
         <a  class="baidu-item" href="baidu_ife/2-22/index.html">2-22</a>
         <a  class="baidu-item" href="baidu_ife/2-23/index.html">2-23</a>
+        <a  class="baidu-item" href="baidu_ife/2-26/index.html">2-26</a>
     </section>
   </body>
 </html>
