--- a/baidu_ife/2-26/index.html
+++ b/baidu_ife/2-26/index.html
@@ -6,82 +6,80 @@
     <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-<section class="control">
-    <ul>
-        <li class="craft-control">
-            <span>1号</span>
-            <ul class="operates">
-                <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
-                <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
-                <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
-                <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
-                <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
-            </ul>
-        </li>
-        <li class="craft-control">
-            <span>2号</span>
-            <ul class="operates">
-                <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
-                <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
-                <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
-                <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
-                <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
-            </ul>
-        </li>
-        <li class="craft-control hidden">
-            <span>3号</span>
-            <ul class="operates">
-                <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
-                <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
-                <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
-                <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
-                <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
-            </ul>
-        </li>
-        <li class="craft-control hidden">
-            <span>4号</span>
-            <ul class="operates">
-                <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
-                <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
-                <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
-                <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
-                <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
-            </ul>
-        </li>
-        <li class="craft-control craft-add">
-            <span>+</span>
-        </li>
-    </ul>
-</section>
-<section class="console">
-    
-</section>
 <section id="layout">
     <div class="planet">
         <div class="hole-1"></div>
         <div class="hole-2"></div>
         <div class="hole-3"></div>
     </div>
-    <div id="orbite1" class="rotating">
+    <div class="orbite1">
         <div class="orbite-1"></div>
-        <div class="craft-model-1"></div>
     </div>
-    <div id="orbite2" class="rotating">
+    <div class="orbite2">
         <div class="orbite-2"></div>
-        <div class="craft-model-2"></div>
     </div>
-    <div id="orbite3" class="rotating">
+    <div class="orbite3">
         <div class="orbite-3"></div>
-        <div class="craft-model-3"></div>
     </div>
-    <div id="orbite4" class="rotating">
+    <div class="orbite4">
         <div class="orbite-4"></div>
-        <div class="craft-model-4"></div>
     </div>
 </section>
+<section class="control-wrapper">
+    <section class="control">
+        <ul>
+            <li class="craft-control">
+                <span>1号</span>
+                <ul class="operates">
+                    <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
+                    <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
+                    <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
+                    <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
+                    <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
+                </ul>
+            </li>
+            <li class="craft-control">
+                <span>2号</span>
+                <ul class="operates">
+                    <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
+                    <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
+                    <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
+                    <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
+                    <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
+                </ul>
+            </li>
+            <li class="craft-control hidden">
+                <span>3号</span>
+                <ul class="operates">
+                    <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
+                    <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
+                    <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
+                    <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
+                    <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
+                </ul>
+            </li>
+            <li class="craft-control hidden">
+                <span>4号</span>
+                <ul class="operates">
+                    <li class="operate-1"><button class="start-forbid"><i class="glyphicon glyphicon-play"></i></button></li>
+                    <li class="operate-1"><button class="start"><i class="glyphicon glyphicon-play"></i></button></li>
+                    <li class="operate-2"><button class="stop-forbid"><i class="glyphicon glyphicon-stop"></i></button></li>
+                    <li class="operate-2"><button class="stop"><i class="glyphicon glyphicon-stop"></i></button></li>
+                    <li class="operate-3"><button class="destory"><i class="glyphicon glyphicon-trash"></i></button></li>
+                </ul>
+            </li>
+            <li class="craft-control craft-add">
+                <span>+</span>
+            </li>
+        </ul>
+    </section>
+    <section class="console">
+
+    </section>
+</section>
 <script src="js/spacecraft.js"></script>
-<script src="js/commander.js"></script>
 <script src="js/mediator.js"></script>
+<script src="js/commander.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
