--- a/baidu_ife/2-26/index.html
+++ b/baidu_ife/2-26/index.html
@@ -6,6 +6,24 @@
     <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
+<section class="background">
+    <div class="planet-1 rotating">
+        <div class="hole-4"></div>
+        <div class="hole-5"></div>
+    </div>
+    <div class="planet-2 rotating">
+        <div class="hole-4"></div>
+        <div class="hole-5"></div>
+    </div>
+    <div class="planet-3 rotating">
+        <div class="hole-4"></div>
+        <div class="hole-5"></div>
+    </div>
+    <div class="planet-4 rotating">
+        <div class="hole-4"></div>
+        <div class="hole-5"></div>
+    </div>
+</section>
 <section id="layout">
     <div class="planet">
         <div class="hole-1"></div>
