--- a/baidu_ife/2-26/index.html
+++ b/baidu_ife/2-26/index.html
@@ -95,6 +95,7 @@
 
     </section>
 </section>
+<script src="js/utils.js"></script>
 <script src="js/spacecraft.js"></script>
 <script src="js/mediator.js"></script>
 <script src="js/commander.js"></script>
