--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <a  class="baidu-item" href="baidu_ife/2-22/index.html">2-22</a>
         <a  class="baidu-item" href="baidu_ife/2-23/index.html">2-23</a>
         <a  class="baidu-item" href="baidu_ife/2-26/index.html">2-26</a>
+        <a  class="baidu-item" href="baidu_ife/2-29/index.html">2-29</a>
     </section>
   </body>
 </html>
