modify home page

--- a/index.html
+++ b/index.html
@@ -40,5 +40,10 @@
         <a  class="baidu-item" href="baidu_ife/2-26/index.html">2-26</a>
         <a  class="baidu-item" href="baidu_ife/2-29/index.html">2-29</a>
     </section>
+
+    <section class="main-content">
+        <p class="title">BAIDU IFE 3</p>
+        <a  class="baidu-item" href="baidu_ife/3-37/index.html">3-37</a>
+    </section>
   </body>
 </html>
