--- a/baidu_ife/3-38/index.html
+++ b/baidu_ife/3-38/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sort</title>
+    <link rel="stylesheet" href="sort.css" />
 </head>
 <body>
-
+<script src="sort.js"></script>
 </body>
 </html>
