--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <section class="main-content">
         <p class="title">BAIDU IFE 3</p>
         <a  class="baidu-item" href="baidu_ife/3-37/index.html">3-37</a>
+        <a  class="baidu-item" href="baidu_ife/3-38/index.html">3-38</a>
     </section>
   </body>
 </html>
