modify main page

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <p class="title">BAIDU IFE 3</p>
         <a  class="baidu-item" href="baidu_ife/3-37/index.html">3-37</a>
         <a  class="baidu-item" href="baidu_ife/3-38/index.html">3-38</a>
+        <a  class="baidu-item" href="baidu_ife/3-43/index.html">3-43</a>
+        <a  class="baidu-item" href="baidu_ife/3-44/index.html">3-44</a>
     </section>
   </body>
 </html>
