add tesk3-45 for main page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <a  class="baidu-item" href="baidu_ife/3-38/index.html">3-38</a>
         <a  class="baidu-item" href="baidu_ife/3-43/index.html">3-43</a>
         <a  class="baidu-item" href="baidu_ife/3-44/index.html">3-44</a>
+        <a  class="baidu-item" href="baidu_ife/3-45/index.html">3-45</a>
     </section>
   </body>
 </html>
