--- a/baidu_ife/3-45/index.html
+++ b/baidu_ife/3-45/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Waterfall</title>
-    <link rel="stylesheet" href="css/waterfall.css" />
+    <title>Bucket</title>
+    <link rel="stylesheet" href="css/bucket.css" />
 </head>
 <body>
 <section class="wrapper">
