--- a/baidu_ife/3-45/index.html
+++ b/baidu_ife/3-45/index.html
@@ -12,7 +12,7 @@
 <script src="js/bucket.js"></script>
 <script src="js/app.js"></script>
 <script>
-    var app = new Application(new Bucket());
+    var app = new Application(new Bucket(3, 6));
     app.init();
 </script>
 </body>
