--- a/plugin/loading/loading.html
+++ b/plugin/loading/loading.html
@@ -34,7 +34,7 @@
         <li class="color6"></li>
     </ul>
     <span class="image"></span>
-    <p class="signature">By Hansneil</p>
+    <p class="signature">By <a href="http://www.hansneil.com">Hansneil</a></p>
 </section>
 </body>
 </html>
