--- a/plugin/loading/loading.html
+++ b/plugin/loading/loading.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Loading Design</title>
+    <meta name="viewport" content="width=device-width, initial-scale=2, user-scalable=no" />
     <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
